<resources>
    <string name="app_name">NetworkingTestApp</string>

    <string name="switch_http_text" translatable="false">HTTP</string>
    <string name="switch_https_text" translatable="false">HTTPS</string>
    <string name="switch_respect_android_text" translatable="false">Proxy Global</string>
    <string name="switch_disrespect_android_text" translatable="false">Custom Proxy</string>

    <string name="switch_http" translatable="false">switchHttp</string>
    <string name="switch_https" translatable="false">switchHttps</string>
    <string name="switch_respect_android" translatable="false">switchRespectAndroid</string>
    <string name="switch_disrespect_android" translatable="false">switchDisrespectAndroid</string>

    <string name="radio_android" translatable="false">Default</string>
    <string name="radio_okhttp" translatable="false">OkHTTP</string>
    <string name="radio_cronet" translatable="false">Cronet</string>
    <string name="radio_apache" translatable="false">Apache</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="title_activity_aas">AAS</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>